GNU Backgammon NEWS -- history of user-visible changes.  15 Jan

* Changes in GNU Backgammon 0.14.3

** fix "bug" in Zadeh match equity table

** Add built-in support for mec 

** Russian translation started

** Interface to relational databases using Python

* Changes in GNU Backgammon 0.14.2

** Translations
 - added Czech
 - several languages updates. See README for status.

** 3D boards
 - new quick draw option for computers without accelerated drivers

** Several bug fixes

* Changes in GNU Backgammon 0.14.1

** Rollouts
 - extendable rollouts

** Bearoff
 - support for Hugh Sconyers' 15x15 full bearoff database

** 3D boards

** Time controls

** Translations to
 - English (US) (complete)
 - German (95% finished)
 - Italian (90% finished)
 - Japanese (60% finished)
 - French (60% finished)
 - Islandic (25% finished)
 - Tyrkish (25% finished)
 - Danish (20% finished)

* Changes in GNU Backgammon 0.14

** general
 - improved support for Jacoby rule and variants (Nackgammon, Hypergammon, 
   and cubeless)
 - new program to generate databases for Hypergammon.

** New dice generator:
 - read dice from file (similar to Jellyfish)
 - dice manipulation, e.g., roll the best roll for computer player

** Import
 - import position files in Snowie .txt format
   (illegal moves will be imported correctly)

** Export
 - export positions in Snowie .txt format

** Analysis
 - option to analyse one side only 
   (e.g., skip analysis of GNU Backgammons moves)
 - Sho Sengoku temperature map


* Changes in GNU Backgammon 0.13

** swap players
 - new command "swap players" (also available from the menu Game->Swap Players)
   that swaps the players. Useful when your match imported from, e.g., 
   GamesGrid is "upside-down".

** analysis
 - new command "analyse move" (Analyse->Analyse Move)
 - analysis of resignations
 - tutor mode added

** match equity tables are now read from XML files. Allows the user to specify
   her own favorite MET. 
